Added functionality for additional projects

--- a/Web/templates/base.html
+++ b/Web/templates/base.html
@@ -41,6 +41,7 @@
             {% if user.is_authenticated %}
               <a class="nav-item nav-link" id="home" href="/home">Личный кабинет</a> 
               <a class="nav-item nav-link" id="myProjects" href="/projects">Мои проекты</a>
+              <a class="nav-item nav-link" id="myProjects" href="/new_project">Создать новый проект</a>
               <a style="float:right;" class="nav-item nav-link" id="logout" href="/logout">Выход</a>
             {% endif %}
            
