--- a/Web/templates/sign_up.html
+++ b/Web/templates/sign_up.html
@@ -2,7 +2,11 @@
 {% block title %}Регистрация{% endblock %}
 
 {% block content %}
-
+<div class="container" id='sign-up-container'>
+        <div class="row pt-4 mt-4 mb-4">
+            <div class="col-4">
+            </div>
+            <div class="col-4">
 <form method="POST">
     <h3 align="center">Регистрация</h3>
     <div class="form-group">
@@ -42,25 +46,12 @@
                 placeholder="Повторно введите пароль"
         />
         </br>
-        <label for = "auth__level">Тип аккаунта</label>
-        <input
-                type="auth__level"
-                class="form-control"
-                id="auth__level"
-                name="auth__level"
-                placeholder="Введите уровень доступа(student, teacher, admin_sys, admin_teach)"
-        />
-        <br/>
-        <label for = "code">Админский код</label>
-        <input
-                type="code"
-                class="form-control"
-                id="code"
-                name="code"
-                placeholder="Код для авторизации под учётной записью админа системы. Оставьте пустым если вы не админ."
-        />
+        
+
     </div>
     <br />
     <button type="submit" class="btn btn-primary">Создать</button>
 </form>
+</div>
+</div>
 {% endblock %}
