Updated password fields

--- a/Web/templates/sign_up.html
+++ b/Web/templates/sign_up.html
@@ -30,7 +30,7 @@
         </br>
         <label for = "password1">Пароль</label>
         <input
-                type="password1"
+                type="password"
                 class="form-control"
                 id="password1"
                 name="password1"
@@ -39,7 +39,7 @@
         </br>
         <label for = "password2">Подтверждение пароля</label>
         <input
-                type="password2"
+                type="password"
                 class="form-control"
                 id="password2"
                 name="password2"
