Added deleting users from projects

--- a/Web/templates/base.html
+++ b/Web/templates/base.html
@@ -14,8 +14,13 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       crossorigin="anonymous"
     />
-
+    
     <title>{% block title %}Главная страница{% endblock %}</title>
+    <style type="text/css">
+      .form-control-borderless {
+        border: 0;
+      }
+    </style>
 
 </head>
 <body>
