--- a/Web/templates/redact_subproject.html
+++ b/Web/templates/redact_subproject.html
@@ -2,117 +2,31 @@
 
 {% block title %}Проект{% endblock %}
 {% block content %}
-<div class="container" id='sign-up-container'>
-    <div class="row pt-4 mt-4 mb-4">
-        <div class="col-8">
-<h1> Название проекта:   </h1>
-<form method="POST">
-    <div class="form-group">
-        <textarea
-                type="text"
-                class="form-control"
-                id="name"
-                name="name"
-        >{{ project.name }}</textarea>
-        </br>
-        <button type="submit" class="btn btn-primary">Применить изменения</button>
- </div>
+<h3> Название проекта:  </h3><span>{{ project.name }} </span> </br> </br>
+<h3> Краткое описание проекта:  </h3><span>{{ project.shortDescription }} </span> </br> </br>
+<h3> Описание проекта:  </h3><span>{{ project.fullDescription }}  </span> </br> </br>
+<h3> Цель проекта:  </h3><span>{{ project.goal }}   </span> </br> </br>
+<form action = {{ url_for('.redactProject', index=project.id) }} method = "POST">
+    <input type="hidden" name="project" value="{{ project.id }}" />
+    <button type="submit" class="btn btn-primary">Редактировать информацию о проекте</button>
+    <br/>
 </form>
-<h2> Краткое описание проекта:   </h2>
-<form method="POST">
-    <div class="form-group">
-        <textarea
-                type="text"
-                class="form-control"
-                id="shortDescription"
-                name="shortDescription"
-        >{{ project.shortDescription }}</textarea>
-        </br>
-        <button type="submit" class="btn btn-primary">Применить изменения</button>
- </div>
-</form>
+<h3> Напоминания: {{ "Пусто" }}  </h3>
+<h2> Содержание: </h2>
 
-<h2> Описание проекта:   </h2>
-<form method="POST">
-    <div class="form-group">
-        <textarea
-                type="text"
-                class="form-control"
-                id="fullDescription"
-                name="fullDescription"
-        >{{ project.fullDescription }}</textarea>
-        </br>
-        <button type="submit" class="btn btn-primary">Применить изменения</button>
- </div>
+<form action = {{ url_for('.showProject', index=project.id) }} method = "POST">
+    <input type="hidden" name="project" value="{{ project.id }}" />
+    <button type="submit" class="btn btn-primary">Создать запись</button>
 </form>
-
-<h2> Цель проекта:   </h2>
-<form method="POST">
-    <div class="form-group">
-        <textarea
-                type="text"
-                class="form-control"
-                id="goal"
-                name="goal"
-        >{{ project.goal }}</textarea>
-        </br>
-        <button type="submit" class="btn btn-primary">Применить изменения</button>
- </div>
+        
+<form action = {{ url_for('.showProject', index=project.id) }} method = "POST">
+    <input type="hidden" name="project" value="{{ project.id }}" />
+    <button type="submit" class="btn btn-primary">Создать TODO</button>
 </form>
 
 <form action = {{ url_for('.showProject', index=project.id) }} method = "POST">
     <input type="hidden" name="project" value="{{ project.id }}" />
-    <button type="submit" class="btn btn-primary">Вернутся к проекту</button>
+    <button type="submit" class="btn btn-primary">Создать раздел</button>
     <br/>
 </form>
-</div>
-<div class="col-4">
-<h2> Удаление проекта   </h2>
-<form method="POST">
-    <div class="form-group">
-        <input
-                type="text"
-                class="form-control"
-                id="delete"
-                name="delete"
-                placeholder="Введите УДАЛИТЬ чтобы удалить проект"
-        ></input>
-        </br>
-        <button type="submit" class="btn btn-primary">Удалить проект</button>
-    </div>
-</form>
-<h2> Добавление и удаления соучастников   </h2>
-
-    <div class="form-group">
-        {% for allowed_user in allowed_users %}
-        <form method="POST">
-        <li class="list-group-item"> Имя: {{ allowed_user.firstName }} <br/> 
-             id: {{ allowed_user.id }}
-             <input
-                type="hidden"
-                class="form-control  border-0 hidden "
-                id="to_delete_user_id"
-                name="to_delete_user_id"
-                value="{{ allowed_user.id  }}"
-        ></input>
-            <button type="submit" class="btn btn-outline-dark btn-sm">
-                    Удалить
-           </button>
-        </li>
-        </form>
-        {% endfor %}
-        </br>
-<form method="POST">
-        <input
-                type="text"
-                class="form-control"
-                id="user_id"
-                name="user_id"
-                placeholder="Введите ID пользователя"
-        ></input></br>
-        <button type="submit" class="btn btn-primary">Добавить</button>
-    </div>
-</form>
-</div>
-
 {% endblock %}
