Finished redact subproject
123

--- a/Web/templates/redact_subproject.html
+++ b/Web/templates/redact_subproject.html
@@ -2,31 +2,59 @@
 
 {% block title %}Проект{% endblock %}
 {% block content %}
-<h3> Название проекта:  </h3><span>{{ project.name }} </span> </br> </br>
-<h3> Краткое описание проекта:  </h3><span>{{ project.shortDescription }} </span> </br> </br>
-<h3> Описание проекта:  </h3><span>{{ project.fullDescription }}  </span> </br> </br>
-<h3> Цель проекта:  </h3><span>{{ project.goal }}   </span> </br> </br>
-<form action = {{ url_for('.redactProject', index=project.id) }} method = "POST">
-    <input type="hidden" name="project" value="{{ project.id }}" />
-    <button type="submit" class="btn btn-primary">Редактировать информацию о проекте</button>
-    <br/>
+
+<div class="container" id='sign-up-container'>
+    <div class="row pt-4 mt-4 mb-4">
+        <div class="col-8">
+<h1> Название проекта:   </h1>
+<form method="POST">
+    <div class="form-group">
+        <textarea
+                type="text"
+                class="form-control"
+                id="name"
+                name="name"
+        >{{ subproject.name }}</textarea>
+        </br>
+        <button type="submit" class="btn btn-primary">Применить изменения</button>
+ </div>
 </form>
-<h3> Напоминания: {{ "Пусто" }}  </h3>
-<h2> Содержание: </h2>
+<h2> Краткое описание проекта:   </h2>
+<form method="POST">
+    <div class="form-group">
+        <textarea
+                type="text"
+                class="form-control"
+                id="description"
+                name="description"
+        >{{ subproject.shortDescription }}</textarea>
+        </br>
+        <button type="submit" class="btn btn-primary">Применить изменения</button>
+ </div>
+</form>
+
 
 <form action = {{ url_for('.showProject', index=project.id) }} method = "POST">
     <input type="hidden" name="project" value="{{ project.id }}" />
-    <button type="submit" class="btn btn-primary">Создать запись</button>
-</form>
-        
-<form action = {{ url_for('.showProject', index=project.id) }} method = "POST">
-    <input type="hidden" name="project" value="{{ project.id }}" />
-    <button type="submit" class="btn btn-primary">Создать TODO</button>
-</form>
-
-<form action = {{ url_for('.showProject', index=project.id) }} method = "POST">
-    <input type="hidden" name="project" value="{{ project.id }}" />
-    <button type="submit" class="btn btn-primary">Создать раздел</button>
+    <button type="submit" class="btn btn-primary">Вернутся к проекту</button>
     <br/>
 </form>
+</div>
+<div class="col-4">
+<h2> Удаление раздела   </h2>
+<form method="POST">
+    <div class="form-group">
+        <input
+                type="text"
+                class="form-control"
+                id="delete"
+                name="delete"
+                placeholder="Введите УДАЛИТЬ чтобы удалить раздел"
+        ></input>
+        </br>
+        <button type="submit" class="btn btn-primary">Удалить раздел</button>
+    </div>
+</form>
+</div>
+
 {% endblock %}
