--- a/Web/templates/main.html
+++ b/Web/templates/main.html
@@ -2,9 +2,9 @@
 
 {% block title %}Главная страница{% endblock %}
 {% block content %}
-<h1> Сейчас мы видим содержимове main.html </h1>
-<h1> Сайт предназначен для помощи студенту с его проектами. </h1>
-<h1> Далее тут буду писать функционал к реализации. Пока временно. </h1>
-<h1> Далее тут буду писать функционал к реализации. Пока временно. </h1>
+
+<h4 class="mt-5"> Добро пожаловать на вебсайт "НАЗВАНИЕ"</h4>
+<h4 class="mt-2"> Данное web приложение предназначено помочь студентам и не только в организации их проектов</h4>
+<h4 class="mt-2"> Вы можете создавать проекты, разелять их на подпроекты и давать доступ другим пользователям</h4>
 
 {% endblock %}
