--- a/Web/templates/home.html
+++ b/Web/templates/home.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
+
 {% block title %}Личный кабинет{% endblock %}
-
 {% block content %}
-<br />
-<h1 align="center"> Логин - {{ user.email }}</h1>
-<h1 align="center"> Имя аккаунта - {{ user.firstName }} </h1>
-<h1 align="center"> Id пользователя - {{ user.id }} </h1>
 
-<br />
-
+<div class="mt-5">
+    <h3 align="center">
+    Логин - {{ user.email }}</h31>
+    <h3 align="center"> Имя аккаунта - {{ user.firstName }} </h3>
+    <h3 align="center"> Id пользователя - {{ user.id }} </h3>
+</div>
 
 {% endblock %}
