Removed unused code

--- a/Web/templates/show_subproject.html
+++ b/Web/templates/show_subproject.html
@@ -15,9 +15,8 @@
                     name="content"
                     >{{ note.content }}</textarea>
             </div>
-            </br>
             <input type="hidden" name="content_id" value="{{ note.id }}" />
-            <button type="submit" class="btn btn-outline-dark btn-sm">Сохранить</button>
+            <button type="submit" class="btn btn-outline-dark btn-sm mt-1">Сохранить</button>
             </div>
         </form>
         <div class="btn-group" role="group" aria-label="Basic example">
