--- a/Web/templates/base.html
+++ b/Web/templates/base.html
@@ -42,7 +42,7 @@
                 <a class="nav-item nav-link" id="home" href="/home">Личный кабинет</a> 
                 <a class="nav-item nav-link" id="my_projects" href="/projects">Мои проекты</a>
                 <a class="nav-item nav-link" id="new_projects" href="/new_project">Создать новый проект</a>
-                <a class="nav-item nav-link" id="other_projects" href="/new_project">Другие проекты</a>
+                <a class="nav-item nav-link" id="other_projects" href="/other_projects">Другие проекты</a>
                 <a class="nav-item nav-link" id="logout" href="/logout">Выход</a>
                 {% endif %}
             </div>
