Fixed invalid input in other projects

--- a/Web/templates/other_projects.html
+++ b/Web/templates/other_projects.html
@@ -23,7 +23,7 @@
 </ul>
 {% endfor %}
 <form action = {{ url_for('.showOtherProjects') }} method = "POST">
-<label for = "add_project">Пароль</label>
+<label for = "add_project">ID проекта</label>
         <input
             type="text"
             class="form-control"
